--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Hello HamzaSamara</h1>
+    <h1>Hello Branch br#1</h1>
+
     <script src="app.js"></script>
 </body>
 </html>
